[package]
name = "porus"
version = "0.1.0"
edition = "2021"
description = "A crate for interacting with the Pocket API."
license = "GNU GENERAL PUBLIC LICENSE Version 3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
